// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPlayer 1`] = `
Object {
  "achievements": Array [],
  "age": 24,
  "country": Object {
    "code": "DE",
    "name": "Germany",
  },
  "facebook": undefined,
  "id": 8000,
  "ign": "syken",
  "image": "https://img-cdn.hltv.org/playerbodyshot/1Qa20w2Am4nkS6LOsCOaFF.png?ixlib=java-2.1.0&w=400&s=ae58a0c87c736b9ea2ff2750fd833d36",
  "name": "Thilo Phan",
  "statistics": Object {
    "deathsPerRound": 0,
    "headshots": 0,
    "killsPerRound": 0,
    "mapsPlayed": 0,
    "rating": 0,
    "roundsContributed": 0,
  },
  "team": Object {
    "id": 5121,
    "name": "Berzerk",
  },
  "twitch": undefined,
  "twitter": "https://twitter.com/sykencs",
}
`;

exports[`getPlayer 2`] = `
Object {
  "achievements": Array [],
  "age": undefined,
  "country": Object {
    "code": "DE",
    "name": "Germany",
  },
  "facebook": undefined,
  "id": 7000,
  "ign": "Allanon",
  "image": "https://static.hltv.org/images/playerprofile/blankplayer.svg",
  "name": "Sebastian Orth",
  "statistics": Object {
    "deathsPerRound": 0,
    "headshots": 0,
    "killsPerRound": 0,
    "mapsPlayed": 0,
    "rating": 0,
    "roundsContributed": 0,
  },
  "team": undefined,
  "twitch": undefined,
  "twitter": undefined,
}
`;

exports[`getPlayer 3`] = `
Object {
  "achievements": Array [],
  "age": 23,
  "country": Object {
    "code": "GE",
    "name": "Georgia",
  },
  "facebook": undefined,
  "id": 3000,
  "ign": "d10",
  "image": "https://static.hltv.org/images/playerprofile/blankplayer.svg",
  "name": "Dati Onezashvili",
  "statistics": Object {
    "deathsPerRound": 0,
    "headshots": 0,
    "killsPerRound": 0,
    "mapsPlayed": 0,
    "rating": 0,
    "roundsContributed": 0,
  },
  "team": undefined,
  "twitch": undefined,
  "twitter": undefined,
}
`;

exports[`getPlayer 4`] = `
Object {
  "achievements": Array [],
  "age": 28,
  "country": Object {
    "code": "US",
    "name": "United States",
  },
  "facebook": undefined,
  "id": 9123,
  "ign": "MAKKA",
  "image": "https://img-cdn.hltv.org/gallerypicture/rS0_w_Kx090EK9b5uzGQNb.jpg?bg=3e4c54&h=400&ixlib=java-2.1.0&rect=1400%2C229%2C1637%2C1637&w=400&s=2cef6ac402e74b880ea4e3ca4cafb9f8",
  "name": "Bryan Drouillard",
  "statistics": Object {
    "deathsPerRound": 0,
    "headshots": 0,
    "killsPerRound": 0,
    "mapsPlayed": 0,
    "rating": 0,
    "roundsContributed": 0,
  },
  "team": undefined,
  "twitch": undefined,
  "twitter": undefined,
}
`;
